# ai-agents-service

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yaml  langgraph.json  pyproject.toml
scripts/: init_mock_db.py  install.sh  run.sh
src/: run_client.py  settings.py
src/agents/: __init__.py  agent_manager.py  llm.py  tools.py
src/api/: main.py
src/database/: postgres.py
src/schema/: __init__.py  models.py  schema.py
src/semantic_layer/: __init__.py  configs.yaml  models.py  utils.py
src/semantic_layer/schemas/: ffma_db.GPBI_ERS_STS_ROW_HISTORY_ALL.md  ffma_db.GPBI_REVENUE_KPI_ARROW.md  ffma_db.GPBI_SE_DAILY_KPI_ARROW.md
src/ui/: app.py
